# Core_War

./: .gitignore  CMakeLists.txt  Makefile  asm  bebebe  bebebe.s  bigzork.s  compile_files_my_asm.sh  compile_invalid_files.sh  compile_unit_tests_native.sh  corewar  disassemler_check.sh  fluttershy.s  helltrain.cor  helltrain.s  newhell.s  run_unit_tests_my.sh  things_to_do.txt  turtle.s  zork.s
Assembly/: 498  CMakeLists.txt  Makefile  asm  asm_main.c  bat.s  bee_gees.s  compare_files.sh  compile_files_my_asm.sh  compile_files_native.sh  compile_invalid_files.sh  file1.cor  fork_to_read.c  log  run_debug  take_name.c  test.cor  test.s  test_champ.s  test_file.cor  test_file.s  test_run.c  workspace.code-workspace
Assembly/asm.dSYM/Contents/Resources/DWARF/: asm
Assembly/champs/: Bazou_trimmed.s
Assembly/cor_files_my/: 42.cor  Asombra.cor  Bazou.cor  Car.cor  Code_eater.cor  Douceur_power.cor  Eraser.cor  ForgottenOne.cor  Gagnant.cor  Hidden.cor  Izi_Miaou.cor  Kappa.cor  Kitty_Miaou.cor  Machine-gun.cor  MarineKing.cor  O-Maley_Miaou.cor  Octobre_Rouge_V4.2.cor  Stargate0_1.cor  THUNDER.cor  TheHarvester.cor  Varimathras.cor  Wall.cor  _.cor  _honeybadger.cor  barriere.cor  bee_gees.cor  big_feet.cor  bigzork.cor  casimir.cor  corelol.cor  darksasuke.cor  doge.cor  dubo.cor  echo.cor  ex.cor  fast.cor  fluttershy.cor  gedeon.cor  helltrain.cor  jinx.cor  (+27 more)
Assembly/cor_files_native/: Bazou_trimmed.cor
Assembly/debug_resources/: Backward.s  maxidef.s  seg_fault.s  test_file.s
Assembly/disassembled_files/: Bazou.s  jumper.s  test_file.s
Assembly/ft_printf/: Makefile  aux_pow_add.c  longdiv.c  print_frac.c
Assembly/ft_printf/libft/: Makefile  ft_putchar.c  libft.h
Assembly/includes/: asm.h  diz_asm.h  ft_printf.h  function_prototypes.h  generic_list.h  op.h  operation_table.h  tokens.h
Assembly/manus_source/: buffer.c  check.c  check_flags.c  classify.c  classify_token.c  container.c  debug_stuff.c  display_stuff.c  display_token.c  distances.c  encode.c  encode_arguments.c  encode_operations.c  encode_strings.c  encode_type.c  error.c  file_stuff.c  generic_list.c  generic_list_part2.c  is_it_fun.c  is_it_good.c  mallokill.c  measure_size.c  read_file.c  support_fluff.c  support_scuff.c  support_snuff.c  support_stuff.c  test_run.c  token.c  token_status.c  transcription.c  translation.c  translation_aggravation.c  translation_frustration.c  translation_vexation.c  unused.c  what_is_it.c
Assembly/src_diz/: collect_pre_print_code.c  complex_instructions.c  create_file.c  ft_binary_read.c  open_octo_file.c  print_binary.c  put_name_comment.c  simple_instrutions.c  validate_dizasm_init.c  walk_throw_byte.c
Virtual_Machine/: CMakeLists.txt  Makefile  corewar  fork.cor
Virtual_Machine/corewar.dSYM/Contents/Resources/DWARF/: corewar
Virtual_Machine/for_tests/: bee_mod.cor  bee_mod1.cor — копия
Virtual_Machine/ft_lftprintf/: Makefile
Virtual_Machine/ft_lftprintf/includes/: printf.h
Virtual_Machine/ft_lftprintf/includes/libft/: Makefile  ft_atoi_size_t.c  ft_itoa.c  ft_itoa_long.c  ft_memdel.c  ft_pow.c  libft.h
Virtual_Machine/ft_lftprintf/srcs/: base_n_p.c  bonus_color.c  color_option.c  ft_printf.c  print_some_wight_aruc.c  work_with_errors.c  work_with_floats.c  work_with_format_char_str.c  work_with_o.c  work_with_u.c  work_with_uxo_part_one.c
Virtual_Machine/includes/: corewar.h  error.h  op.h  visual.h
Virtual_Machine/srcs/corewar/: additional.c  calculate.c  check_input.c  corewar.c  cycles_to_death.c  error_list.c  free_resourse.c  get_champion.c  init_resourse.c  op_13_16.c  op_1_4.c  op_5_8.c  op_9_12.c  print_some.c  print_some_1.c  read_code.c  read_memory.c  start_war.c  vis_data.c  vis_draw.c  vis_init.c  vis_keys.c  vis_put.c  vis_start.c
asm.dSYM/Contents/Resources/DWARF/: asm
corewar.dSYM/Contents/Resources/DWARF/: corewar
crash/: 99_registers.cor  buffer_overflow.s  helltrain_crash.cor  helltrain_crash2.cor  helltrain_crash3.cor
for_tests/: corewar
ft_lftprintf/: Makefile
ft_lftprintf/includes/libft/: Makefile  get_next_line.c
includes/: asm.h  constants.h  corewar.h  diz_asm.h  error.h  function_prototypes.h  operation_table.h  tables.h  tokens.h
includes/asm/: constants.h  function_prototypes.h  generic_list.h  operation_table.h
includes/asm/Новая папка/: asm.h  tokens.h
includes/corewar/: error.h
srcs/assembler/: asm_main.c  buffer.c  check.c  classify.c  classify_token.c  classify_token_subroutines.c  complex_instructions.c  container.c  create_file.c  display_stuff.c  display_token.c  distances.c  encode_arguments.c  encode_operations.c  encode_strings.c  encode_type.c  error.c  file_stuff.c  flag_check.c  fork_to_read.c  ft_binary_read.c  generic_list.c  generic_list_part2.c  is_it_fun.c  is_it_good.c  mallokill.c  measure_size.c  open_octo_file.c  read_file.c  support_fluff.c  support_scuff.c  support_snuff.c  support_stuff.c  take_name.c  test_run.c  token.c  token_status.c  transcription.c  translation.c  translation_aggravation.c  (+4 more)
srcs/assembler/Новая папка/: asm_main.c  encode_strings.c  mallokill.c  support_stuff.c  walk_throw_byte.c  what_is_it.c
srcs/corewar/: check_input.c  corewar.c  get_champion.c  op_1_4.c  op_5_8.c  print_some_1.c  print_some_2.c  start_war.c
Новая папка/Virtual_Machine/: CMakeLists.txt  Makefile  corewar
Новая папка/Virtual_Machine/corewar.dSYM/Contents/Resources/DWARF/: corewar
Новая папка/Virtual_Machine/ft_lftprintf/includes/libft/: ft_get_integer.c  ft_memalloc.c  ft_putchar_mod.c  ft_strlen_mod.c
Новая папка/Virtual_Machine/ft_lftprintf/srcs/: a.out  bonus_fd.c  bonus_smile.c  format_checker.c  work_with_flags.c  work_with_form_x.c  work_with_int.c  work_with_p.c  work_with_uxo_part_two.c  work_with_x_big.c
Новая папка/Virtual_Machine/includes/: corewar.h  op.h  visual.h
Новая папка/Virtual_Machine/srcs/corewar/: check_input.c  corewar.c  cycles_to_death.c  free_resourse.c  get_champion.c  init_resourse.c  op_1_4.c  op_9_12.c  print_some.c  read_code.c  read_memory.c  start_war.c  vis_draw.c  vis_init.c  vis_put.c  vis_start.c
