cmake_minimum_required(VERSION 3.15)
project(Assembly C)

set(CMAKE_C_STANDARD 11)

include_directories(ft_printf)
include_directories(ft_printf/libft)
include_directories(includes)

add_executable(Assembly
        ft_printf/libft/ft_atoi.c
        ft_printf/libft/ft_atoi_base.c
        ft_printf/libft/ft_bzero.c
        ft_printf/libft/ft_isalnum.c
        ft_printf/libft/ft_isalpha.c
        ft_printf/libft/ft_isascii.c
        ft_printf/libft/ft_isdigit.c
        ft_printf/libft/ft_isprint.c
        ft_printf/libft/ft_isspace.c
        ft_printf/libft/ft_itoa.c
        ft_printf/libft/ft_itoa_base.c
        ft_printf/libft/ft_lst_free.c
        ft_printf/libft/ft_lstadd.c
        ft_printf/libft/ft_lstdel.c
        ft_printf/libft/ft_lstdelone.c
        ft_printf/libft/ft_lstiter.c
        ft_printf/libft/ft_lstmap.c
        ft_printf/libft/ft_lstnew.c
        ft_printf/libft/ft_match.c
        ft_printf/libft/ft_memalloc.c
        ft_printf/libft/ft_memccpy.c
        ft_printf/libft/ft_memchr.c
        ft_printf/libft/ft_memcmp.c
        ft_printf/libft/ft_memcpy.c
        ft_printf/libft/ft_memdel.c
        ft_printf/libft/ft_memmove.c
        ft_printf/libft/ft_memset.c
        ft_printf/libft/ft_print_char_arr.c
        ft_printf/libft/ft_putchar.c
        ft_printf/libft/ft_putchar_fd.c
        ft_printf/libft/ft_putendl.c
        ft_printf/libft/ft_putendl_fd.c
        ft_printf/libft/ft_putnbr.c
        ft_printf/libft/ft_putnbr_fd.c
        ft_printf/libft/ft_putstr.c
        ft_printf/libft/ft_putstr_fd.c
        ft_printf/libft/ft_sort_word_tab.c
        ft_printf/libft/ft_stdin.c
        ft_printf/libft/ft_strcat.c
        ft_printf/libft/ft_strchr.c
        ft_printf/libft/ft_strclr.c
        ft_printf/libft/ft_strcmp.c
        ft_printf/libft/ft_strcpy.c
        ft_printf/libft/ft_strdel.c
        ft_printf/libft/ft_strdup.c
        ft_printf/libft/ft_strequ.c
        ft_printf/libft/ft_striter.c
        ft_printf/libft/ft_striteri.c
        ft_printf/libft/ft_strjoin.c
        ft_printf/libft/ft_strlcat.c
        ft_printf/libft/ft_strlen.c
        ft_printf/libft/ft_strmap.c
        ft_printf/libft/ft_strmapi.c
        ft_printf/libft/ft_strncat.c
        ft_printf/libft/ft_strncmp.c
        ft_printf/libft/ft_strncpy.c
        ft_printf/libft/ft_strnequ.c
        ft_printf/libft/ft_strnew.c
        ft_printf/libft/ft_strnstr.c
        ft_printf/libft/ft_strrchr.c
        ft_printf/libft/ft_strsplit.c
        ft_printf/libft/ft_strstr.c
        ft_printf/libft/ft_strsub.c
        ft_printf/libft/ft_strtrim.c
        ft_printf/libft/ft_tolower.c
        ft_printf/libft/ft_toupper.c
        ft_printf/libft/get_next_line.c
        ft_printf/libft/libft.h
        ft_printf/aux_pow_add.c
        ft_printf/ft_printf.c
        ft_printf/ft_printf.h
        ft_printf/libft.h
        ft_printf/longdiv.c
        ft_printf/longdouble.c
        ft_printf/parser.c
        ft_printf/parser_2.c
        ft_printf/print_char.c
        ft_printf/print_eg.c
        ft_printf/print_float.c
        ft_printf/print_float_2.c
        ft_printf/print_float_3.c
        ft_printf/print_frac.c
        ft_printf/print_int.c
        ft_printf/print_int_2.c
        ft_printf/print_itoa.c
        ft_printf/print_o.c
        ft_printf/print_o_2.c
        ft_printf/print_str.c
        ft_printf/print_trash.c
        ft_printf/print_uint.c
        ft_printf/print_uint_2.c
        ft_printf/print_utf.c
        includes/asm.h
        includes/diz_asm.h
        includes/ft_printf.h
        includes/function_prototypes.h
        includes/generic_list.h
        includes/libft.h
        includes/op.h
        includes/operation_table.h
        includes/tokens.h
        manus_source/check_flags.c
        manus_source/classify.c
        manus_source/container.c
        manus_source/display_stuff.c
        manus_source/distances.c
        manus_source/encode_arguments.c
        manus_source/encode_operations.c
        manus_source/encode_strings.c
        manus_source/file_stuff.c
        manus_source/generic_list.c
        manus_source/mallokill.c
        manus_source/support_stuff.c
        manus_source/test_run.c
        manus_source/token.c
        manus_source/transcription.c
        manus_source/translation.c
        manus_source/what_is_it.c
        src_diz/collect_pre_print_code.c
        src_diz/complex_instructions.c
        src_diz/create_file.c
        src_diz/ft_binary_read.c
        src_diz/open_octo_file.c
        src_diz/print_binary.c
        src_diz/put_name_comment.c
        src_diz/simple_instrutions.c
        src_diz/validate_dizasm_init.c
        src_diz/walk_throw_byte.c
        asm_main.c
        fork_to_read.c
        take_name.c)
